--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp clean && gulp build",
+    "install": "gulp clean && gulp build",
     "start": "node server/server.js"
   },
   "repository": {
